# docker-view

./: LICENSE  docker-image-viewer.cabal  stack.yaml
html/: index.html  styles-desktop.css  styles.css
lib/: Docker.hs
lib/Docker/: ContainerConfig.hs  DockerImage.hs  FSLayer.hs  Fetch.hs  FullyQualifiedImageName.hs  Platform.hs  Registry.hs  Repository.hs  SingleDockerImage.hs
lib/Docker/Fetch/: Http.hs  ImageConfig.hs  ImageManifestReference.hs  ManifestV2.hs  MediaTypes.hs  OAuthContext.hs  Parsing.hs  Urls.hs
notes/: design.txt  notes.txt
src/: App.hs  Main.hs  Render.hs
test/: IntegrationTests.hs  UnitTests.hs
